Layout the translate bubble after changing child view visibility.

BoxLayout only manipulates visible subviews, so making a subview newly
visible may require a layout.

A SizeToContents() call can also trigger Layout() but only if the size
of the Widget actually changes. r466211 removed some unnecessary insets
such that this was no longer likely for a particular translate bubble
UI transition.

BUG=721213, 658854
TEST=(see bug) On Windows, set flags:
 - chrome://flags/#translate-2016q2-ui Disabled.
 - chrome://flags/#secondary-ui-md Enabled.
Go to a page that needs translating and translate it. Ensure the
"Show original" button is positioned in the bottom-right and clickable.

Review-Url: https://codereview.chromium.org/2898633004
Cr-Commit-Position: refs/heads/master@{#474511}

Former-commit-id: bb91c5093e7b44830872d79d95d4c391c82776b8